syntax = "proto3";

package task_service;

import "batch_plan.proto";
import "common.proto";
import "data.proto";

option optimize_for = SPEED;

// Task is a running instance of Stage.
message TaskId {
  string query_id = 1;
  uint32 stage_id = 2;
  uint32 task_id = 3;
}

message TaskInfo {
  enum TaskStatus {
    NOT_FOUND = 0;
    PENDING = 1;
    RUNNING = 2;
    FAILING = 3;
    CANCELLING = 4;
    FINISHED = 5;
    FAILED = 6;
    ABORTED = 7;
    ABORTING = 8;
  }
  batch_plan.TaskId task_id = 1;
  TaskStatus task_status = 2;
}

message CreateTaskRequest {
  batch_plan.TaskId task_id = 1;
  batch_plan.PlanFragment plan = 2;
  uint64 epoch = 3;
}

message CreateTaskResponse {
  common.Status status = 1;
}

message AbortTaskRequest {
  batch_plan.TaskId task_id = 1;
}

message AbortTaskResponse {
  common.Status status = 1;
}

message RemoveTaskRequest {
  batch_plan.TaskId task_id = 1;
}

message RemoveTaskResponse {
  common.Status status = 1;
}

message GetTaskInfoRequest {
  batch_plan.TaskId task_id = 1;
}

message GetTaskInfoResponse {
  common.Status status = 1;
  TaskInfo task_info = 2;
}

message GetDataResponse {
  common.Status status = 1;
  data.DataChunk record_batch = 2;
}

message GetStreamRequest {
  uint32 up_fragment_id = 1;
  uint32 down_fragment_id = 2;
}

message ExecuteRequest {
  batch_plan.TaskId task_id = 1;
  batch_plan.PlanFragment plan = 2;
  uint64 epoch = 3;
}

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTaskInfo(GetTaskInfoRequest) returns (GetTaskInfoResponse);
  rpc AbortTask(AbortTaskRequest) returns (AbortTaskResponse);
  rpc RemoveTask(RemoveTaskRequest) returns (RemoveTaskResponse);
  rpc Execute(ExecuteRequest) returns (stream GetDataResponse);
}

message GetDataRequest {
  batch_plan.TaskOutputId task_output_id = 1;
}

message GetStreamResponse {
  data.StreamMessage message = 1;
}

service ExchangeService {
  rpc GetData(GetDataRequest) returns (stream GetDataResponse);
  rpc GetStream(GetStreamRequest) returns (stream GetStreamResponse);
}
